--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -49,6 +49,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Check for git
+        run: |
+          if ! command -v git &> /dev/null; then
+            if [ "${{ matrix.target }}" == "linux" ]; then
+              sudo apt-get update
+              sudo apt-get install -y git
+            elif [ "${{ matrix.target }}" == "macos" ]; then
+              brew install git
+            fi
+          fi
+
       - name: Install dependencies (Linux)
         if: matrix.target == 'linux'
         run: |
