--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -77,6 +77,7 @@ jobs:
           UNATTENDED=1 ./build.sh
           echo "OSXCROSS_ROOT=$PWD" >> $GITHUB_ENV
           echo "$PWD/target/bin" >> $GITHUB_PATH
+          cd ..
 
       - name: Install dependencies
         run: |
@@ -91,9 +92,9 @@ jobs:
           -DCMAKE_TOOLCHAIN_FILE=cmake/darwin-toolchain.cmake \
           -DCMAKE_SYSTEM_NAME=Darwin \
           -DCMAKE_OSX_ARCHITECTURES=x86_64 \
-          -DCMAKE_C_COMPILER=$OSXCROSS_ROOT/target/bin/o64-clang \
-          -DCMAKE_CXX_COMPILER=$OSXCROSS_ROOT/target/bin/o64-clang++ \
-          -DCMAKE_OSX_SYSROOT=$OSXCROSS_ROOT/target/SDK/MacOSX11.3.sdk \
+          -DCMAKE_C_COMPILER="${OSXCROSS_ROOT}/target/bin/o64-clang" \
+          -DCMAKE_CXX_COMPILER="${OSXCROSS_ROOT}/target/bin/o64-clang++" \
+          -DCMAKE_OSX_SYSROOT="${OSXCROSS_ROOT}/target/SDK/MacOSX11.3.sdk" \
           -DVERSION=${{needs.version.outputs.version}}
 
       - name: Build
@@ -141,9 +142,11 @@ jobs:
         run: |
           git clone https://github.com/P-H-C/phc-winner-argon2.git
           cd phc-winner-argon2
-          make SYSTEM=MINGW CC=x86_64-w64-mingw32-gcc
+          # Build with MinGW and generate DLL
+          make SYSTEM=MINGW CC=x86_64-w64-mingw32-gcc LIBRARY_REL=libargon2.dll
+          # Copy header and libraries
           sudo cp include/argon2.h /usr/x86_64-w64-mingw32/include/
-          sudo cp libargon2.dll /usr/x86_64-w64-mingw32/lib/
+          sudo cp libargon2.dll /usr/x86_64-w64-mingw32/bin/
           sudo cp libargon2.a /usr/x86_64-w64-mingw32/lib/
           cd ..
 
